Added spacing to mat cards, set nav bar to be front always

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,8 @@
+/* Always in front */
 .app-toolbar {
     top: 0;
     position: fixed;
+    z-index: 1;
   }
 
   /* push content below toolbar down, so toolbar doesn't cover content */
