--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,9 @@
 <div>
   <h1 class="bannerFont align-text-center large-Font padding-top jose-font">Portfolio</h1>
   <div>
+
     <mat-card class="portfolio-row portfolio-margin-spacing">
-      <div style="border: 2px solid blue;">
+      <div>
         <mat-card-header>
           <div>
             <mat-card-title class="margin-title-spacing">Orcastars Web App</mat-card-title>
@@ -17,6 +18,7 @@
         <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
@@ -33,6 +35,7 @@
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
@@ -49,6 +52,7 @@
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
@@ -65,6 +69,7 @@
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+
   </div>
 
   <div>
@@ -84,6 +89,7 @@
         <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
@@ -100,6 +106,7 @@
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+    
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
@@ -116,6 +123,7 @@
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
