--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1 class="bannerFont align-text-center large-Font padding-top jose-font">Portfolio</h1>
-  <div>
+  <div class="flex">
 
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
@@ -40,7 +40,7 @@
       <div>
         <mat-card-header>
           <div>
-            <mat-card-title class="margin-title-spacing">Coffee Calculator</mat-card-title>
+            <mat-card-title class="margin-title-spacing">Healthcare Explained</mat-card-title>
             <mat-card-subtitle><br/></mat-card-subtitle>
           </div>
         </mat-card-header>
@@ -57,7 +57,7 @@
       <div>
         <mat-card-header>
           <div>
-            <mat-card-title class="margin-title-spacing">Health Explained</mat-card-title>
+            <mat-card-title class="margin-title-spacing">Lisa's Travel Blog</mat-card-title>
             <mat-card-subtitle><br/></mat-card-subtitle>
           </div>
         </mat-card-header>
@@ -72,7 +72,7 @@
 
   </div>
 
-  <div>
+  <div class="flex">
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
