--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,6 @@
 <div>
   <h1 class="bannerFont align-text-center large-Font padding-top jose-font">Portfolio</h1>
-  <div class="flex">
-
+  <div class="flexcontainer">
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
@@ -58,77 +57,6 @@
         <mat-card-header>
           <div>
             <mat-card-title class="margin-title-spacing">Lisa's Travel Blog</mat-card-title>
-            <mat-card-subtitle><br/></mat-card-subtitle>
-          </div>
-        </mat-card-header>
-        <mat-card-content>
-          <a href="https://edmundchan8.github.io/travelWebsite/index.html">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/couplevacation.jpg" alt="image of couple on beach">
-          </a>
-        </mat-card-content>
-        <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
-      </div>
-    </mat-card>
-
-  </div>
-
-  <div class="flex">
-    <mat-card class="portfolio-row portfolio-margin-spacing">
-      <div>
-        <mat-card-header>
-          <div>
-            <mat-card-title class="margin-title-spacing">Orcastars Web App</mat-card-title>
-            <mat-card-subtitle><br/></mat-card-subtitle>
-          </div>
-        </mat-card-header>
-        <mat-card-content>
-          <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/orcastars.png" alt="logo of OrcaConservancy">
-          </a>
-        </mat-card-content>
-        <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
-      </div>
-    </mat-card>
-
-    <mat-card class="portfolio-row portfolio-margin-spacing">
-      <div>
-        <mat-card-header>
-          <div>
-            <mat-card-title class="margin-title-spacing">Coffee Calculator</mat-card-title>
-            <mat-card-subtitle><br/></mat-card-subtitle>
-          </div>
-        </mat-card-header>
-        <mat-card-content>
-          <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/coffee-image.jpg" alt="Image of coffee cup">
-          </a>
-        </mat-card-content>
-        <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
-      </div>
-    </mat-card>
-    
-    <mat-card class="portfolio-row portfolio-margin-spacing">
-      <div>
-        <mat-card-header>
-          <div>
-            <mat-card-title class="margin-title-spacing">Coffee Calculator</mat-card-title>
-            <mat-card-subtitle><br/></mat-card-subtitle>
-          </div>
-        </mat-card-header>
-        <mat-card-content>
-          <a href="https://edmundchan8.github.io/coffeeCalculator/index.html">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
-          </a>
-        </mat-card-content>
-        <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
-      </div>
-    </mat-card>
-
-    <mat-card class="portfolio-row portfolio-margin-spacing">
-      <div>
-        <mat-card-header>
-          <div>
-            <mat-card-title class="margin-title-spacing">Health Explained</mat-card-title>
             <mat-card-subtitle><br/></mat-card-subtitle>
           </div>
         </mat-card-header>
