added href links to different sections of webpage

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -13,3 +13,7 @@
   .jose-font {
     font-family: 'josefinSans-italic', 'arial', sans-serif;
   }
+
+  .anchor-offset {
+    padding-top: 5em;
+  }
