--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="anchor-offset" id="portfolio">
   <h1 class="bannerFont align-text-center large-Font padding-top jose-font">Portfolio</h1>
   <div class="flexcontainer">
     <mat-card class="portfolio-row portfolio-margin-spacing">
