--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="backgroundOne bg-font-color padding-bottom">
+<div class="backgroundOne bg-font-color padding-bottom anchor-offset" id="home">
     <div class="margin-top">
         <h1 class="bannerFont align-text-center extra-Large-Font jose-font">Chi Hong Edmund Chan</h1>
         <h1 class="bannerFont align-text-center extra-Large-Font jose-font">Web Application Programmer</h1>
