--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <div class="toolbar-margin-bottom">
     <mat-toolbar class="app-toolbar">
       <span class="align-image-center">
-        <button mat-button>
+        <a mat-button href="#home">
           Home
-        </button>
-        <button mat-button>
+        </a>
+        <a mat-button href="#about">
           About Me
-        </button>
-        <button mat-button>
+        </a>
+        <a mat-button href="#portfolio">
           Portfolio
-        </button>
-      <button mat-button>
+        </a>
+      <a mat-button href="#contact">
         Contact Me
-      </button>
+      </a>
       </span>
     </mat-toolbar>
   </div>
