--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -33,7 +33,7 @@
     font-size: 9px;
 }
 
-/* flex on desktop */
+/* flex styling to control portfolio items */
 .flexcontainer{
     display: flex;
     flex-wrap: wrap;
@@ -41,3 +41,7 @@
     justify-content: center;
     flex-flow: row wrap;
 }
+
+.anchor-offset {
+    scroll-margin-top: 3em;
+  }
