Added nenw porfolio project, previous website

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -68,5 +68,22 @@
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
       </div>
     </mat-card>
+
+    <mat-card class="portfolio-row portfolio-margin-spacing">
+      <div>
+        <mat-card-header>
+          <div>
+            <mat-card-title class="margin-title-spacing">Personal Website 2020</mat-card-title>
+            <mat-card-subtitle><br/></mat-card-subtitle>
+          </div>
+        </mat-card-header>
+        <mat-card-content>
+          <a href="https://edmundchan8.github.io/travelWebsite/index.html">
+            <img mat-card-image class="portfolio-img" src="../../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
+          </a>
+        </mat-card-content>
+        <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
+      </div>
+    </mat-card>
   </div>
 </div>
