--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -7,6 +7,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-position: center;
   }
 
   .bannerFont {
@@ -24,4 +25,16 @@
 
   .anchor-offset {
     scroll-margin-top: 3em;
+  }
+
+  @media only screen and (max-width: 900px) {
+    .extra-Large-Font {
+      font-size: 52px;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .extra-Large-Font {
+      font-size: 42px;
+    }
   }
