--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,9 +10,12 @@
         <a mat-button href="#portfolio">
           Portfolio
         </a>
-      <a mat-button href="#contact">
-        Contact Me
-      </a>
+        <a mat-button href="https://edmundchan8.github.io/files/ChiHongEdmundChan-WebsiteResume.pdf">
+          Resume
+        </a>
+        <a mat-button href="#contact">
+          Contact Me
+        </a>
       </span>
     </mat-toolbar>
   </div>
