updated assets url for orcastars

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,7 +11,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/orcastars.png" alt="logo of OrcaConservancy">
+            <img mat-card-image class="portfolio-img" src="assets/img/orcastars.png" alt="logo of OrcaConservancy">
           </a>
         </mat-card-content>
         <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
