updated portfolion component

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,7 +11,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img mat-card-image class="portfolio-img" src="../assets/img/orcastars.png" alt="logo of OrcaConservancy">
+            <img mat-card-image class="portfolio-img" src="../../assets/img/orcastars.png" alt="logo of OrcaConservancy">
           </a>
         </mat-card-content>
         <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
@@ -27,7 +27,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://github.com/Cascadia-Connections/orca-stars">
+          <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/coffeeCalculator">
             <img mat-card-image class="portfolio-img" src="../dist/assets/img/coffee-image.jpg" alt="Image of coffee cup">
           </a>
         </mat-card-content>
@@ -44,8 +44,8 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://edmundchan8.github.io/coffeeCalculator/index.html">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
+          <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/healthExplained">
+            <img mat-card-image class="portfolio-img" src="../dist/assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -61,8 +61,8 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://edmundchan8.github.io/travelWebsite/index.html">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/couplevacation.jpg" alt="image of couple on beach">
+          <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/travelWebsite">
+            <img mat-card-image class="portfolio-img" src="../dist/assets/img/couplevacation.jpg" alt="image of couple on beach">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -78,8 +78,25 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://edmundchan8.github.io/travelWebsite/index.html">
-            <img mat-card-image class="portfolio-img" src="../../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
+          <a href="https://github.com/edmundchan8/edmundsWebsite2020">
+            <img mat-card-image class="portfolio-img" src="../dist/assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
+          </a>
+        </mat-card-content>
+        <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
+      </div>
+    </mat-card>
+
+    <mat-card class="portfolio-row portfolio-margin-spacing">
+      <div>
+        <mat-card-header>
+          <div>
+            <mat-card-title class="margin-title-spacing">Unity 3D Projects</mat-card-title>
+            <mat-card-subtitle><br/></mat-card-subtitle>
+          </div>
+        </mat-card-header>
+        <mat-card-content>
+          <a href="https://pokedev8.itch.io/">
+            <img mat-card-image class="portfolio-img" src="../dist/assets/img/unityScreenShot.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
