link and image changes

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a mat-button href="#portfolio">
           Portfolio
         </a>
-        <a mat-button href="https://edmundchan8.github.io/files/ChiHongEdmundChan-WebsiteResume.pdf">
+        <a mat-button href="../../assets/files/ChiHongEdmundChan-Resume.pdf">
           Resume
         </a>
         <a mat-button href="#contact">
