--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,7 +11,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img mat-card-image class="portfolio-img" src="/assets/img/orcastars.png" alt="logo of OrcaConservancy">
+            <img mat-card-image class="portfolio-img" src="../assets/img/orcastars.png" alt="logo of OrcaConservancy">
           </a>
         </mat-card-content>
         <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
@@ -28,7 +28,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/coffeeCalculator">
-            <img mat-card-image class="portfolio-img" src="/assets/img/coffee-image.jpg" alt="Image of coffee cup">
+            <img mat-card-image class="portfolio-img" src="../assets/img/coffee-image.jpg" alt="Image of coffee cup">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -45,7 +45,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/healthExplained">
-            <img mat-card-image class="portfolio-img" src="/assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
+            <img mat-card-image class="portfolio-img" src="../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -62,7 +62,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/travelWebsite">
-            <img mat-card-image class="portfolio-img" src="/assets/img/couplevacation.jpg" alt="image of couple on beach">
+            <img mat-card-image class="portfolio-img" src="../assets/img/couplevacation.jpg" alt="image of couple on beach">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -79,7 +79,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/edmundchan8/edmundsWebsite2020">
-            <img mat-card-image class="portfolio-img" src="/assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
+            <img mat-card-image class="portfolio-img" src="../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -96,7 +96,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://pokedev8.itch.io/">
-            <img mat-card-image class="portfolio-img" src="/assets/img/unityScreenShot.jpg" alt="screenshot of my previous website">
+            <img mat-card-image class="portfolio-img" src="../assets/img/unityScreenShot.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
