--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,14 @@
 <div id="about" class="bg-div-color anchor-offset">
   <div class="backgroundTwo">
-    <h1 class="bannerFont jose-font align-text-center large-Font">About Me</h1>
+    <p class="bannerFont jose-font align-text-center large-Font">About Me</p>
     <img class="photo align-image-center" src="../assets/img/profilePic.jpeg">
     <div class="align-text-center">
       <span class="text-left-align">
-        <h1 class="text-line-gap">Associates Degree in <strong>Web Application Development</strong></h1>
+        <p class="text-line-gap">Associates Degree in <strong>Web Application Development</strong></p>
         <br/>
-        <h1 class="text-line-gap">Proficient in <strong>C#, Javascript, Java, Angular, HTML, CSS, Bootstrap and ReactJS</strong></h1>
+        <p class="text-line-gap">Proficient in <strong>C#, Javascript, Java, Angular, HTML, CSS, Bootstrap and ReactJS</strong></p>
         <br/>
-        <h1 class="text-line-gap">Experienced with <strong>ASP.NET Core, Visual Studio Code, Adobe Photoshop, Illustrator, GIMP and SQL</strong></h1>
+        <p class="text-line-gap">Experienced with <strong>ASP.NET Core, Visual Studio Code, Adobe Photoshop, Illustrator, GIMP and SQL</strong></p>
       </span>
     </div>
   </div>
@@ -17,32 +17,33 @@
     <span class="material-icons icon-formatting" style="color:rgb(22, 47, 211); font-size: 3em;" >coffee</span>
   </div>
   <div class="padding-bottom">
-    <h1 class="bannerFont jose-font align-text-center large-Font">Employment</h1>
+    <p class="bannerFont jose-font align-text-center large-Font">Employment</p>
+    <br/>
     <div class="align-text-center">
       <span class="text-left-align">
         <span>
-          <h1>
+          <p>
             <strong>May 2017 to Present</strong>
             <br/>
               <span class="text-line-gap">Employed as a Member Support Representative at <strong>
               <a href="https://www.crystalcommerce.com">Crystalcommerce</a></strong>, supporting local game stores.</span>
-          </h1>
+          </p>
         </span>
         <span class="text-line-gap">
-          <h1>
+          <p>
             <strong>December 2020 to Present</strong>
             <br/><span class="text-line-gap">Interning at <strong><a href="https://www.findmytreatments.com/home">Trials and Treatment</a></strong> 
               using the Angular Framework to add functionality to site.</span>
-          </h1>
+          </p>
         </span>         
         <span>
-          <h1>
+          <p>
             <strong>March 2020 to August 2020</strong>
             <br/><span class="text-line-gap">
               Interned at the <strong><a href="https://www.orcaconservancy.org/">Orca Conservancy</a>
               </strong>, building and deploying an ASP.NET Core Web Application.
             </span>
-          </h1>
+          </p>
         </span>
       </span>
     </div>
