--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -13,3 +13,23 @@
 .anchor-offset {
   padding-top: 5em;
 }
+
+p {
+  font-size: 25px;
+}
+
+ /* Media screens for tablets */
+ @media only screen
+ and (max-device-width: 1024px)  {
+ p {
+   font-size: 20px
+ }
+}
+
+/* Media screens for mobile phones */
+@media only screen 
+and (max-device-width: 768px)  { 
+ p {
+   font-size: 14px;
+ }
+}
