--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,12 +2,12 @@
     <h1 class="bannerFont align-text-center large-Font padding-top jose-font">Contact Me</h1>   
     <div class="align-text-center">
         <span>
-            <h1 class="text-left-align text-line-gap text-margin">I really appreciate your time in viewing my website and hope to continue 
+            <p class="text-left-align text-line-gap text-margin">I really appreciate your time in viewing my website and hope to continue 
                 updating the contents of it as I hone and develop my web application 
                 skills further. I am extremely eager to learn more and hear how my skills 
                 may be of service to you.  I can be contacted via email at 
                 <a href="mailto:edd.chan@hotmail.com?" target="_top">edd.chan@hotmail.com</a> 
-                if you have any questions!</h1><br/>
+                if you have any questions!</p><br/>
         </span>
       </div>
 </div>
