--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -27,7 +27,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/coffeeCalculator">
+          <a href="https://edmundchan8.github.io/edmundsWebsite2020/coffeeCalculator/index.html">
             <img mat-card-image class="portfolio-img" src="../assets/img/coffee-image.jpg" alt="Image of coffee cup">
           </a>
         </mat-card-content>
@@ -44,7 +44,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/healthExplained">
+          <a href="https://edmundchan8.github.io/edmundsWebsite2020/tree/main/healthExplained">
             <img mat-card-image class="portfolio-img" src="../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
           </a>
         </mat-card-content>
@@ -61,7 +61,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://github.com/edmundchan8/edmundsWebsite2020/tree/main/travelWebsite">
+          <a href="https://edmundchan8.github.io/edmundsWebsite2020/tree/main/travelWebsite">
             <img mat-card-image class="portfolio-img" src="../assets/img/couplevacation.jpg" alt="image of couple on beach">
           </a>
         </mat-card-content>
@@ -78,7 +78,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://github.com/edmundchan8/edmundsWebsite2020">
+          <a href="https://edmundchan8.github.io/edmundsWebsite2020/">
             <img mat-card-image class="portfolio-img" src="../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
