testing img links

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -44,8 +44,14 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://edmundchan8.github.io/edmundsWebsite2020/tree/main/healthExplained">
+          <a href="https://edmundchan8.github.io/edmundsWebsite2020/healthExplained">
             <img mat-card-image class="portfolio-img" src="../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
+            <p>1</p>
+            <img src="../assets/img/doctorPointingNotes.jpg">
+            <p>2</p>
+            <img class="photo align-image-center" src="../assets/img/profilePic.jpeg">
+            <p>3</p>
+            <img src="assets/img/doctorPointingNotes.jpg">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -61,7 +67,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://edmundchan8.github.io/edmundsWebsite2020/tree/main/travelWebsite">
+          <a href="https://edmundchan8.github.io/edmundsWebsite2020/travelWebsite">
             <img mat-card-image class="portfolio-img" src="../assets/img/couplevacation.jpg" alt="image of couple on beach">
           </a>
         </mat-card-content>
