fix for mat cards in portfolio

--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -10,16 +10,7 @@
     display: block;
     margin: 2em;
 }
-
-.portfolio-img{
-    /* height: 11em; */
-    height: 200px;
-    max-width: 250px;
-    border-radius: 10px;
-    opacity: 85%;
-    margin: auto;
-}
-
+/*  
 .portfolio-row{
     float: left;
     max-width: 275px;
