--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -5,13 +5,13 @@
       <div>
         <mat-card-header>
           <div>
-            <mat-card-title class="margin-title-spacing">Orcastars Web App</mat-card-title>
+            <mat-card-title>Orcastars Web App</mat-card-title>
             <mat-card-subtitle><br/></mat-card-subtitle>
           </div>
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img mat-card-image class="portfolio-img" src="../assets/img/orcastars.png" alt="logo of OrcaConservancy">
+            <img mat-card-image src="../assets/img/orcastars.png" alt="logo of OrcaConservancy">
           </a>
         </mat-card-content>
         <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
@@ -28,7 +28,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/coffeeCalculator/index.html">
-            <img mat-card-image class="portfolio-img" src="../assets/img/coffee-image.jpg" alt="Image of coffee cup">
+            <img mat-card-image src="../assets/img/coffee-image.jpg" alt="Image of coffee cup">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -45,13 +45,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/healthExplained">
-            <img mat-card-image class="portfolio-img" src="../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
-            <p>1</p>
-            <img src="../assets/img/doctorPointingNotes.jpg">
-            <p>2</p>
-            <img class="photo align-image-center" src="../assets/img/profilePic.jpeg">
-            <p>3</p>
-            <img src="assets/img/doctorPointingNotes.jpg">
+            <img mat-card-image src="../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -68,7 +62,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/travelWebsite">
-            <img mat-card-image class="portfolio-img" src="../assets/img/couplevacation.jpg" alt="image of couple on beach">
+            <img mat-card-image src="../assets/img/couplevacation.jpg" alt="image of couple on beach">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -85,7 +79,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/">
-            <img mat-card-image class="portfolio-img" src="../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
+            <img mat-card-image src="../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -102,7 +96,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://pokedev8.itch.io/">
-            <img mat-card-image class="portfolio-img" src="../assets/img/unityScreenShot.jpg" alt="screenshot of my previous website">
+            <img mat-card-image src="../assets/img/unityScreenShot.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
