added find my treaments to portfolio and other stylign changes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,8 +18,7 @@
   </div>
   <div class="padding-bottom">
     <p class="bannerFont jose-font align-text-center large-Font">Employment</p>
-    <br/>
-    <div class="align-text-center">
+    <div class="align-text-center anchor-offset">
       <span class="text-left-align">
         <span>
           <p>
