--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -5,13 +5,30 @@
       <div>
         <mat-card-header>
           <div>
-            <mat-card-title>Orcastars Web App</mat-card-title>
+            <mat-card-title class="margin-title-spacing">Find My Treatments</mat-card-title>
             <mat-card-subtitle><br/></mat-card-subtitle>
           </div>
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img mat-card-image src="../assets/img/orcastars.png" alt="logo of OrcaConservancy">
+            <img class="portfolio-img" mat-card-image src="../assets/img/findmytreatment.jpg" alt="screenshot of findmytreatments website">
+          </a>
+        </mat-card-content>
+        <mat-card-content><strong>Angular, Typescript</strong></mat-card-content>
+      </div>
+    </mat-card>
+    
+    <mat-card class="portfolio-row portfolio-margin-spacing">
+      <div>
+        <mat-card-header>
+          <div>
+            <mat-card-title class="margin-title-spacing">Orcastars Web App</mat-card-title>
+            <mat-card-subtitle><br/></mat-card-subtitle>
+          </div>
+        </mat-card-header>
+        <mat-card-content>
+          <a href="https://github.com/Cascadia-Connections/orca-stars">
+            <img class="portfolio-img" mat-card-image src="../assets/img/orcastars.png" alt="logo of OrcaConservancy">
           </a>
         </mat-card-content>
         <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
@@ -28,7 +45,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/coffeeCalculator/index.html">
-            <img mat-card-image src="../assets/img/coffee-image.jpg" alt="Image of coffee cup">
+            <img class="portfolio-img" mat-card-image src="../assets/img/coffee-image.jpg" alt="Image of coffee cup">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -45,7 +62,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/healthExplained">
-            <img mat-card-image src="../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
+            <img class="portfolio-img" mat-card-image src="../assets/img/doctorPointingNotes.jpg" alt="image doctor's hand pointing at notes">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -62,7 +79,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/travelWebsite">
-            <img mat-card-image src="../assets/img/couplevacation.jpg" alt="image of couple on beach">
+            <img class="portfolio-img" mat-card-image src="../assets/img/couplevacation.jpg" alt="image of couple on beach">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -79,7 +96,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/">
-            <img mat-card-image src="../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
+            <img class="portfolio-img" mat-card-image src="../assets/img/previousWebsite.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
@@ -96,7 +113,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://pokedev8.itch.io/">
-            <img mat-card-image src="../assets/img/unityScreenShot.jpg" alt="screenshot of my previous website">
+            <img class="portfolio-img" mat-card-image src="../assets/img/unityScreenShot.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
