deleted class from findmytreatment mat card image

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,7 +11,7 @@
         </mat-card-header>
         <mat-card-content>
           <a href="https://github.com/Cascadia-Connections/orca-stars">
-            <img class="portfolio-img" mat-card-image src="../assets/img/findmytreatment.jpg" alt="screenshot of findmytreatments website">
+            <img mat-card-image src="../assets/img/findmytreatment.jpg" alt="screenshot of findmytreatments website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>Angular, Typescript</strong></mat-card-content>
