updating url for findmytreatments

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -10,7 +10,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://github.com/Cascadia-Connections/orca-stars">
+          <a href="https://www.findmytreatments.com/">
             <img mat-card-image src="../assets/img/findmytreatment.jpg" alt="screenshot of findmytreatments website">
           </a>
         </mat-card-content>
