Update website, adding FowDeckbuilder and updating about contents

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
       <span class="text-left-align">
         <p class="text-line-gap">Associates Degree in <strong>Web Application Development</strong></p>
         <br/>
-        <p class="text-line-gap">Proficient in <strong>C#, Javascript, Java, Angular, HTML, CSS, Bootstrap and ReactJS</strong></p>
+        <p class="text-line-gap">Proficient in <strong>C#, Javascript, Angular, Python, HTML, CSS and Bootstrap</strong></p>
         <br/>
         <p class="text-line-gap">Experienced with <strong>ASP.NET Core, Visual Studio Code, Adobe Photoshop, Illustrator, GIMP and SQL</strong></p>
       </span>
