--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -39,16 +39,16 @@
       <div>
         <mat-card-header>
           <div>
-            <mat-card-title class="margin-title-spacing">Coffee Calculator</mat-card-title>
+            <mat-card-title class="margin-title-spacing">Force of Will Deck Builder</mat-card-title>
             <mat-card-subtitle><br/></mat-card-subtitle>
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://edmundchan8.github.io/edmundsWebsite2020/coffeeCalculator/index.html">
-            <img mat-card-image src="../assets/img/coffee-image2.jpg" alt="Image of coffee cup">
+          <a href="https://github.com/edmundchan8/FowDecks">
+            <img mat-card-image src="../assets/img/fowDeckBuilder.jpg" alt="screenshot of my Fow deckbuilder app">
           </a>
         </mat-card-content>
-        <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
+        <mat-card-content><strong>ASP.NET Core, C#, HTML, CSS, Javascript</strong></mat-card-content>
       </div>
     </mat-card>
 
@@ -63,6 +63,23 @@
         <mat-card-content>
           <a href="https://edmundchan8.github.io/edmundsWebsite2020/healthExplained">
             <img mat-card-image src="../assets/img/doctorPointingNotes2.jpg" alt="image doctor's hand pointing at notes">
+          </a>
+        </mat-card-content>
+        <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
+      </div>
+    </mat-card>
+
+    <mat-card class="portfolio-row portfolio-margin-spacing">
+      <div>
+        <mat-card-header>
+          <div>
+            <mat-card-title class="margin-title-spacing">Coffee Calculator</mat-card-title>
+            <mat-card-subtitle><br/></mat-card-subtitle>
+          </div>
+        </mat-card-header>
+        <mat-card-content>
+          <a href="https://edmundchan8.github.io/edmundsWebsite2020/coffeeCalculator/index.html">
+            <img mat-card-image src="../assets/img/coffee-image2.jpg" alt="Image of coffee cup">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
