removed resume link

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,9 +10,9 @@
         <a mat-button href="#portfolio">
           Portfolio
         </a>
-        <a mat-button href="../../assets/files/ChiHongEdmundChan-Resume.pdf">
+        <!-- <a mat-button href="../../assets/files/ChiHongEdmundChan-Resume.pdf">
           Resume
-        </a>
+        </a> -->
         <a mat-button href="#contact">
           Contact Me
         </a>
