temp rmeoved old website

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -103,7 +103,7 @@
       </div>
     </mat-card>
 
-    <mat-card class="portfolio-row portfolio-margin-spacing">
+    <!-- <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
         <mat-card-header>
           <div>
@@ -112,13 +112,13 @@
           </div>
         </mat-card-header>
         <mat-card-content>
-          <a href="https://edmundchan8.github.io/edmundsWebsite2020/">
+          <a href=""> //Temporarily removed
             <img mat-card-image src="../assets/img/previousWebsite2.jpg" alt="screenshot of my previous website">
           </a>
         </mat-card-content>
         <mat-card-content><strong>HTML, CSS and Javascript</strong></mat-card-content>
       </div>
-    </mat-card>
+    </mat-card> -->
 
     <mat-card class="portfolio-row portfolio-margin-spacing">
       <div>
